<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.applemango.runnerbe.presentation.screen.fragment.bookmark.BookMarkViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <TextView
            android:id="@+id/scrap_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/book_mark_list"
            android:textSize="16dp"
            android:textColor="@color/dark_g3"
            android:layout_margin="16dp">
        </TextView>

        <RadioGroup
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@={vm.radioChecked}"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="19dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_tab"
            app:layout_constraintTop_toBottomOf="@id/scrap_text_view">

            <RadioButton
                android:id="@+id/allTab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:textSize="14sp"
                android:checked="true"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="10dp"
                android:button="@null"
                android:textColor="@color/tc_select_tab"
                android:text="@string/all_work"
                android:background="@drawable/selector_tab"/>

            <RadioButton
                android:id="@+id/beforeTab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:textSize="14sp"
                android:checked="false"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="10dp"
                android:button="@null"
                android:textColor="@color/tc_select_tab"
                android:text="@string/before_work"
                android:background="@drawable/selector_tab"/>

            <RadioButton
                android:id="@+id/afterTab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:textSize="14sp"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="10dp"
                android:button="@null"
                android:textColor="@color/tc_select_tab"
                android:text="@string/after_work"
                android:background="@drawable/selector_tab"/>

            <RadioButton
                android:id="@+id/holidayTab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:gravity="center"
                android:textSize="14sp"
                android:paddingTop="8dp"
                android:paddingBottom="10dp"
                android:button="@null"
                android:textColor="@color/tc_select_tab"
                android:text="@string/holiday"
                android:background="@drawable/selector_tab"/>

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/countView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bookmarkRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            postListAdapter="@{vm.bookmarkList}"
            bookmarkEvent="@{vm.getChangeBookMarkStatusListener()}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/countView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

