<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.applemango.runnerbe.presentation.screen.fragment.map.write.RunningWriteViewModel" />
    </data>

<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:background="@color/black">-->



<!--    </ScrollView>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/running_write_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:padding="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/top_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_write"
                android:textColor="@color/dark_g3_5"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textColor="@color/ic_next_enable"
                android:textSize="16sp"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RadioGroup
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@={vm.radioChecked}"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_tab"
            app:layout_constraintTop_toBottomOf="@id/running_write_top">

            <RadioButton
                android:id="@+id/beforeTab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:textSize="14sp"
                android:checked="true"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="10dp"
                android:button="@null"
                android:textColor="@color/tc_select_tab"
                android:text="@string/before_work"
                android:background="@drawable/selector_tab"/>

            <RadioButton
                android:id="@+id/afterTab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:textSize="14sp"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="10dp"
                android:button="@null"
                android:textColor="@color/tc_select_tab"
                android:text="@string/after_work"
                android:background="@drawable/selector_tab"/>

            <RadioButton
                android:id="@+id/holidayTab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:gravity="center"
                android:textSize="14sp"
                android:paddingTop="8dp"
                android:paddingBottom="10dp"
                android:button="@null"
                android:textColor="@color/tc_select_tab"
                android:text="@string/holiday"
                android:background="@drawable/selector_tab"/>

        </RadioGroup>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/title"
                    android:textColor="@color/dark_g3"
                    android:textSize="14sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@={vm.runningTitle}"
                    android:hint="@string/hint_running_title"
                    android:background="@drawable/bg_dark_5_5g_radius_6"
                    android:padding="16dp"
                    android:textColor="@color/dark_g1"
                    android:textColorHint="@color/dark_g3_5"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/titleTextView"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/date"
                    android:textColor="@color/dark_g3"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/titleEditText"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/dateLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_dark_5_5g_radius_6"
                    android:padding="16dp"
                    app:layout_constraintTop_toBottomOf="@id/dateTextView">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_calender"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/dateView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="16dp"
                        tools:text="3/31 (금) AM 6:00"
                        android:textColor="@color/dark_g1"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/dateSetButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_right_arrow_16"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/timeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/play_time"
                    android:textColor="@color/dark_g3"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/dateLayout"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/timeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_dark_5_5g_radius_6"
                    android:padding="16dp"
                    app:layout_constraintTop_toBottomOf="@id/timeTextView">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_time_18"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/timeView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="16dp"
                        tools:text="0 시간 20 분"
                        android:textColor="@color/dark_g1"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/timeSetButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_right_arrow_16"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/timeLimitDescriptionView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/msg_running_time_limit"
                    android:textSize="12sp"
                    android:textColor="@color/error_light"
                    app:layout_constraintTop_toBottomOf="@id/timeLayout"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/runningLocationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/running_location"
                    android:textColor="@color/dark_g3"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/timeLimitDescriptionView"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="40dp"
                    app:layout_constraintTop_toBottomOf="@id/runningLocationTextView"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.naver.maps.map.MapView
                        android:id="@+id/mapView"
                        android:layout_width="match_parent"
                        android:layout_height="218dp"/>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>